# post-research-papers-to-slack

./: README.md  main.py  pyproject.toml  run_main.sh
script/: run_main.sh
test/: test_request_llm.ipynb
utils/: utilts.py
